2006-08-22 01:06  nanardon

	* soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf/Checks.pm: -
	  check also synthesis existence before saying a media is sync

2006-08-22 00:50  nanardon

	* soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf.pm: - add
	  MD5SUM as supported value

2006-08-22 00:40  nanardon

	* soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf.pm,
	  soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf/Checks.pm,
	  soft/rpm/MDV-Distribconf/trunk/t/01distribconf.t: - add
	  getmediapath variant function, improve tests

2006-08-21 21:17  nanardon

	* soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf.pm: - on the
	  road for 3.02

2006-08-21 21:12  nanardon

	* soft/rpm/MDV-Distribconf/trunk/MANIFEST: - update MANIFEST

2006-08-21 21:10  nanardon

	* soft/rpm/MDV-Distribconf/trunk/MANIFEST,
	  soft/rpm/MDV-Distribconf/trunk/t/01history.t: - fix tests for
	  old distrib

2006-08-21 21:08  nanardon

	* soft/rpm/MDV-Distribconf/trunk/testdata/history/old/8.0/alpha: -
	  remove broken dist

2006-08-21 21:00  nanardon

	* soft/rpm/MDV-Distribconf/trunk/t/01history.t,
	  soft/rpm/MDV-Distribconf/trunk/testdata/history,
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel,
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0,
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/amd64,
	  
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/amd64/Mandrake,
	  
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/amd64/Mandrake/base,
	  
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/amd64/Mandrake/base/hdlists,
	  
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/i586,
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/i586/Mandrake,
	  
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/i586/Mandrake/base,
	  
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.0/i586/Mandrake/base/hdlists,
	  soft/rpm/MDV-Distribconf/trunk/testdata/history/devel/10.1,