@@ -1,4 +1,4 @@
-# $Id: media.cfg 56863 2006-08-19 00:55:51Z nanardon $
+# $Id: media.cfg 31934 2005-10-09 22:12:33Z othauvin $
 
 [media_info]
 version=2006.0
