@@ -1,4 +1,4 @@
-# $Id: media.cfg 56863 2006-08-19 00:55:51Z nanardon $
+# $Id: media.cfg 41762 2006-07-20 19:39:51Z nanardon $
 
 [media_info]
 version=2006.0
