@@ -1,4 +1,4 @@
-# $Id: README 56934 2006-08-21 10:16:29Z nanardon $
+# $Id: README 56863 2006-08-19 00:55:51Z nanardon $
 
 This directory contain a fake of distrib for testing purpose.
 
