@@ -1,4 +1,4 @@
-# $Id: media.cfg 56934 2006-08-21 10:16:29Z nanardon $
+# $Id: media.cfg 56853 2006-08-18 23:01:31Z nanardon $
 
 [media_info]
 version=2006.0
