@@ -1,3 +1,11 @@
+2006-08-22 10:43  nanardon
+
+	* soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf/Checks.pm,
+	  soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf/MediaCFG.pm:
+	  - add updates_for var
+	  - generalize some test
+	  - add test for deny value
+
 2006-08-22 01:06  nanardon
 
 	* soft/rpm/MDV-Distribconf/trunk/lib/MDV/Distribconf/Checks.pm: -
